Fix dark mode background to #202020

--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-html[class~="dark"],
-html[class~="dark"] body {
-  background-color: #383836 !important;
+html:not(.dark) body {
+  background-color: #F9F8F7 !important;
 }
 
-html:not([class~="dark"]),
-html:not([class~="dark"]) body {
-  background-color: #F9F8F7 !important;
+html.dark body {
+  background-color: #202020 !important;
 }
